# Draw

./: bazel-Draw
.github/workflows/: build-ios-app.yml
Draw/: AppDelegate.swift  BUILD.bazel  Info.plist  SceneDelegate.swift  ViewController.swift
Draw.xcodeproj/: project.pbxproj
Draw.xcodeproj/project.xcworkspace/xcuserdata/franklinmelo.xcuserdatad/: UserInterfaceState.xcuserstate
Draw.xcodeproj/xcshareddata/xcschemes/: Draw.xcscheme
Draw.xcodeproj/xcuserdata/franklinmelo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Draw.xcodeproj/xcuserdata/franklinmelo.xcuserdatad/xcschemes/: xcschememanagement.plist
Draw/Draw.xcodeproj/: project.pbxproj
Draw/Draw.xcodeproj/rules_xcodeproj/: generated.xcfilelist
Draw/Draw.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
Draw/Draw.xcodeproj/xcshareddata/xcschemes/: Draw (App).xcscheme  Draw (Library).xcscheme  Draw.xcscheme  DrawTests.xcscheme
DrawTests/: BUILD.bazel  DrawTests.swift
