load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj"
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Draw",
    top_level_targets = [
        top_level_target(
            label = "//Draw:Draw", 
            target_environments = ["simulator"]
        ),
        top_level_target(
            label = "//DrawTests:DrawTests", 
            target_environments = ["simulator"]
        )
    ],
)

swift_library(
    name = "SwiftLibrary",
    srcs = glob([
        "**/*.swift",
    ]),
    data = glob([
        "*.xcassets/**/*",
        "*.lproj/**/*",
    ]),
    module_name = "Draw",
    visibility = ["//visibility:public"],
)

ios_application(
    name = "Draw",
    bundle_id = "com.franklinmelo.Draw",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = [":Info.plist"],
    minimum_os_version = "16",
    visibility = ["//visibility:public"],
    deps = [":SwiftLibrary"],
)