load(
    "@build_bazel_rules_apple//apple:ios.bzl",
    "ios_unit_test"
)
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "DrawTestsLibrary",
    testonly = True,
    srcs = glob(["**/*.swift"]),
    module_name = "DrawTests", 
    tags = ["manual"],
    deps = [
        "//Draw:SwiftLibrary",
    ],
)

ios_unit_test(
    name = "DrawTests",
    minimum_os_version = "16.0",
    tags = ["manual"],
    test_host = "//Draw:Draw",
    visibility = [
        "//Draw:__subpackages__", # turn this visible only to Draw subpackages, becouse public can be problems
        "@rules_xcodeproj//xcodeproj:generated", #turn this tests visible do xcodeproj top_level_targets
    ],
    deps = [":DrawTestsLibrary"],
)